# TimJoda

./: AutoAlign.cpp  CMakeLists.txt  CMakeListsNewVTK.txt  ClipandMeasure.cpp  CreateDistanceVTP.cpp  FeatureMeasure.cpp  GetTopologicalMatch.cpp  MeasureScalars.cpp  README.md  RegionClipMeasure.cpp  ScreenShot.cpp  VTK_LoadSTLorPLY.hpp  YodaOcclusion.cpp
